--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,6 +12,11 @@
 			background: rgba(255, 255, 255, 0.6);
 			padding: 10px;
 		}
+		.user-info {
+			text-align: -webkit-center;
+			color: blue;
+			font-size: 20px;
+		}
 
 		h1 {
 			margin-top: 0;
