--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,13 +6,13 @@
 		</ion-toolbar>
 	</ion-header>
 
-	<ion-content [menuClose]="wide">
-		<ion-list>
-			<ion-item (click)="openPage(homePage)">
+	<ion-content [menuClose]="wide" style="background-color: #32DBDB">
+		<ion-list style="background-color: #32DBDB">
+			<ion-item (click)="openPage(homePage)" style="background-color: #32DBDB">
 				<ion-icon [name]="homePage.icon" item-left></ion-icon>
 				{{homePage.title}}
 			</ion-item>
-			<ion-item *ngFor="let p of nativePages" (click)="openPage(p)">
+			<ion-item *ngFor="let p of nativePages" (click)="openPage(p)" style="background-color: #32DBDB">
 				<ion-icon [name]="p.icon" item-left></ion-icon>
 				{{p.title}}
 			</ion-item>
